# aiagent

./: .dockerignore  .env  .env.example  CONVENTIONS.md  CUSTOM_PROMPT.md  Dockerfile  LICENSE  PROCESS_MANAGEMENT.md  README.md  SKILLS.md  config.py  docker-compose.yml  mcp_remote_server.py  mcp_server.py  pyproject.toml  remote_server.py  skills_manager.py  test_skills_manager.py  test_skills_simple.py
remote_server_lib/: command_executor.py  core.py  execution_timing.py  process_registry.py  sourcecode.py
remote_server_lib/api/: async_process.py  git_functions.py  models.py  str_replace.py  sync_process.py
remote_server_lib/file_operations/: __init__.py  file_ops.py
skills/example/: hello.py  skill.md
tests/: README.md  test_mcp_remote_server.py  test_mcp_server.py
