[project]
name = "aiagent"
version = "0.1.0"
description = "MCP server to linux commands in docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

#[project.scripts]
#mcp-server = "mcp_server:main"

#[tool.uv.sources]
#mcp = { git = "https://github.com/lingster/python-sdk" }
